chore: 제품 리소스 추가(아이콘)

--- a/ProcessExplorer/ProcessExplorer.WinForms.WinApp/ProcessExplorer.WinForms.WinApp.csproj
+++ b/ProcessExplorer/ProcessExplorer.WinForms.WinApp/ProcessExplorer.WinForms.WinApp.csproj
@@ -7,7 +7,12 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <AssemblyName>Process Explorer</AssemblyName>
+    <ApplicationIcon>Ico_ProcessExplorer.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="Ico_ProcessExplorer.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="System.Management" Version="9.0.7" />
@@ -15,6 +20,21 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ProcessExplorer.Core\ProcessExplorer.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
